8.3.0

 * Allow transfers of selections from one option to nothing (deselect option)
 * Add links to over- and under-paid attendees
 * Allow filtering attendees based on their address

8.2.0

 * Make it possible to edit and delete notes in sadmin2

8.1.0

 * Update django-extensions to 1.3.3

8.0.0

 * sadmin2

   A total rewrite of the previous administration interface,
   with a lot of nice improvements.

 * Code-cleanup

   The following packages have been removed:
   - The REST interface
   - Translation framework
   - Remove translation framework
   - Remove proftpd notification package
   - Remove scheckin package

 * Update django-crispy-forms to 1.3.2

 * Update Django to 1.6.3
 * Update South to 0.8.2
 * Update django-crispy-forms to 1.4.0
 * Update django-extensions to 1.2.0

7.5.0

 * Update Django to 1.5.0
 * Update django-tastypie to 0.9.12

 * Simplified invoices internally
 * Performance improvements in sadmin

7.4.0

 * Update Django to 1.4.3
 * Update South to 0.7.6
 * Update django-crispy-forms to 1.2.3
 * Update django-extensions to 1.0.1
 * Update django-debug-toolbar to 0.9.4
 * Update webassets and django-assets to 0.8

 * Add attendee map for events
 * SAdmin modules are now mounted from the user application (fixing the multiple registrations problem)

 * Fixed missing chart libraries

7.3.0

 * Add scheckin (Ajax powered check-in solution)
 * Improvements to the REST API
 * Improved administration of groups
 * Add group membership to user profile

Dependencies

 * Now requires Django 1.4.1

7.2.0

 * Remove htdigest notify module
 * Added initial implementation of REST API
 * Added a resend-emails function in sadmin for all attendees
 * Added package concept to option groups
     An option group declared as a package gives a discount if all options are selected
 * Improved login page with indications of access denied and remote login requests

Dependencies

 * Change django-uni-form to django-crispy-forms 1.1.4