@@ -5,6 +5,8 @@
 <div class="row">
 <div class="col-lg-12">
 
+    <i><a href="{% url "sadmin2:event_attendees" event_pk=event.pk %}?q=has:comment"><i class="glyphicon glyphicon-comment"></i> Only show attendees with notes</a></i>
+
     <div class="btn-group pull-right">
         <a class="btn btn-success" href="{% url "sadmin2:event_attendees_add" event_pk=event.pk %}">Tilføj bruger</a>
         <!--<a class="btn btn-success" href="#">Opret bruger</a>-->
